Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-13451

QmlProfiler timeline will use wrong row heights for binding loop markers

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • Qt Creator 3.3.0-rc1
    • Qt Creator 3.3.0-beta1
    • QML Profiler
    • None
    • 3d9c38f3caf9a3397e491a096a49680840d00881

      yto = getYPosition(modelIndex, destindex) +
              m_profilerModelProxy->rowHeight(modelIndex, destindex) / 2 - y();
      

      This is wrong, because rowHeight() expects a row index, not an item index.

        For Gerrit Dashboard: QTCREATORBUG-13451
        # Subject Branch Project Status CR V

            ulherman Ulf Hermann
            ulherman Ulf Hermann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes