QmlProfiler: use correct row heights for binding loop markers

Change-Id: Id476d9be7c0b1a4fb7c8e5fffb2861441d369316
Task-number: QTCREATORBUG-13451
Reviewed-by: Kai Koehne <kai.koehne@theqtcompany.com>